set default rhi to dx12 and enable renderdoc

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,8 +16,10 @@ GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=EHardwareClass::Mobile
-DefaultGraphicsPerformance=EGraphicsPreset::Maximum
+TargetedHardwareClass=Mobile
+AppliedTargetedHardwareClass=Mobile
+DefaultGraphicsPerformance=Maximum
+AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/TestUE4")
@@ -141,4 +143,7 @@ VisualizeCalibrationGrayscaleMaterialPath=None
 
 [/Script/Slate.SlateSettings]
 bExplicitCanvasChildZOrder=True
+
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 
