--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -25,6 +25,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/TestUE4")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/TestUE4")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="TestUE4GameModeBase")
+NearClipPlane=1.000000
 
 [/Script/Engine.RendererSettings]
 r.Mobile.DisableVertexFog=True
